--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Converter_pictures</string>
+    <string name="text_converter">Выбрать файл для конвертации</string>
+    <string name="text_view_converted">Идет конвертация формата изображения, подождите...</string>
+    <string name="btn_text_cancel">Отмена конвертации</string>
 </resources>
